--- a/Style.css
+++ b/Style.css
@@ -15,42 +15,68 @@
         width: 200px;
         }
 
+/*h1*/
+#sns {
+    color: #FCFAF8;
+}
+h1 {
+    font-family:"Playwrite VN", serif;
+    font-style: normal;
+}
+
 /*h2*/
     h2 {
     /*Hey Dan! I got this font from google. I'll make sure to attribute this as well.  https://fonts.google.com/selection/embed */
+    
     font-family: "Cinzel", serif;
-    font-optical-sizing: auto;
-    font-weight: <500>;
     font-style: normal;
     }
+#introduction h2 {
+    font-family: 'Times New Roman', serif 
+}
 
 
 /*Body*/
+#introduction p:first-of-type {
+    text-indent: 50px;
+}
+
+
     body {
     background-color: #FCFAF8; 
     background-image: linear-gradient(90deg, #FCFAF8, #F1EBE1, #C0CFB2);
     }
 
+/*gallery Images */
+.gallery {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%; /* Adjust width to 100% to take up the full available width */
+    max-width: 100%; /* Ensure it doesn't go beyond the container's width */
+}
 
+.gallery img {
+    height: 30%;
+    width: 30%;
+    border: 5px solid #FCFAF8
+}
 
 /*Betty Lou's Library'*/
-    #BettyLous img{
-    height: 200px;
-    width: 200px;
-    }
         #BettyLous {
-        background-image: linear-gradient(15deg, #011127, #591526, #A6445D); 
+            background-image: linear-gradient(15deg, #011127, #591526, #A6445D); 
+            color: #fff;
         }
-            #blhead {
-            color: #ffffff;
-            background-color: #340f0a; 
-            }
+                #blhead {
+                color: #ffffff;
+                background-color: #340f0a; 
+                }
+                    #BettyLous p:first-of-type {
+                        text-indent: 50px;
+                    }
 
 /*Ricoardo's Hideaway*/
-    #Ricardos img{
-    height: 200px;
-    width: 200px;
-    }
+
         #Ricardos {
         background-image: linear-gradient(15deg, #F4A261, #E9C46A, #2a9d8f, #264653);
         }
@@ -58,13 +84,11 @@
             color: #ffffff;
             background-color: #204553;
             }
-
+                #Ricardos p:first-of-type {
+                    text-indent: 50px;
+                }
 /*Añejo's*/
 
-    #Añejos img{
-    height: 200px;
-    width: 200px;
-    }
         #ahead {
         color: #ffffff;
         background-color:#d06344 ; 
@@ -73,7 +97,9 @@
             #Añejos {
             background-image: linear-gradient(180deg, #e07a5f, #f2cc8f, #b92323b4); 
             }
-
+                #Añejos p:first-of-type {
+                    text-indent: 50px;
+                }  
 /*footer*/
     footer {
     background-color: #8BA888; 
